# Theory-of-Parallelism

./: .gitignore
exercise01/: CMakeLists.txt  README.md  exercise01.cpp
exercise02/task1/: CMakeLists.txt  README.md  dgemv  dgemv.cpp
exercise02/task2/: CMakeLists.txt  README.md  integration.cpp
exercise02/task3/: CMakeLists.txt  README.md  simple_iteration.cpp
exercise03/task1/: CMakeLists.txt  dgemv.cpp  dgemv_stdthread.cpp  dgemv_tbb.cpp
exercise03/task2/: CMakeLists.txt  main.cpp  server.h  test.cpp
exercise04/solution/: main.py
